// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages >> Home should fire the logout event when the Logout button is pressed: Home-opened-menu 1`] = `
<div>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    />
  </div>
  <div
    class="relative overflow-hidden "
  >
    <div
      class="bg-background h-screen bg-cover bg-no-repeat bg-center pt-4"
      style="background-image: url(img/background_main_page.png);"
    >
      <header
        class="relative"
        data-headlessui-state=""
      >
        <nav
          aria-label="Global"
          class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl"
        >
          <div
            class="flex flex-1 items-center"
          >
            <a
              href="/"
            >
              <img
                alt="Ghost Town - Learning with Ghosts"
                data-nimg="1"
                decoding="async"
                height="170"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
                style="color: transparent;"
                width="150"
              />
            </a>
          </div>
          <div
            class="md:flex md:items-center md:space-x-6"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="block md:hidden mx-4"
              >
                <div
                  class="relative inline-block text-left"
                  data-headlessui-state=""
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class=""
                    data-headlessui-state=""
                    id="headlessui-menu-button-:re:"
                    type="button"
                  >
                    <svg
                      fill="white"
                      height="32px"
                      id="Layer_1"
                      version="1.1"
                      viewBox="0 0 32 32"
                    >
                      <path
                        d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="hidden md:flex flex-row justify-items-center items-center"
              >
                <div
                  class="mx-4"
                >
                  <a
                    href="#"
                  >
                    <span
                      class="font-josefin font-bold text-lg text-white"
                    >
                      ABOUT
                    </span>
                  </a>
                </div>
                <div
                  class="mx-4"
                >
                  <div
                    class="relative inline-block text-left"
                    data-headlessui-state="open"
                  >
                    <div>
                      <button
                        aria-controls="headlessui-menu-items-:rg:"
                        aria-expanded="true"
                        aria-haspopup="true"
                        class=""
                        data-headlessui-state="open"
                        id="headlessui-menu-button-:rf:"
                        type="button"
                      >
                        <div>
                          <span
                            class="inline-flex h-12 w-12 items-center justify-center rounded-full bg-gray-500"
                          >
                            <span
                              class="text-lg font-medium leading-none text-white"
                            >
                              U
                            </span>
                          </span>
                        </div>
                      </button>
                    </div>
                    <div
                      aria-labelledby="headlessui-menu-button-:rf:"
                      class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition ease-out duration-100 transform opacity-0 scale-95"
                      data-headlessui-state="open"
                      id="headlessui-menu-items-:rg:"
                      role="menu"
                      tabindex="0"
                    >
                      <div
                        class="py-1"
                        role="none"
                      >
                        <button
                          class=" bg-gray-100 text-gray-900 block w-full px-4 py-2 text-left text-sm"
                          data-headlessui-state=""
                          id="headlessui-menu-item-:rh:"
                          role="menuitem"
                          tabindex="-1"
                          type="button"
                        >
                          Logout
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl h-full"
      >
        <div
          class=""
        >
          <section
            class="mx-auto md:mx-4 max-w-7xl lg:px-8 self-center"
          >
            <div
              class="font-josefin text-white flex flex-col items-start"
            >
              <div
                class="text-4xl md:text-6xl font-bold md:w-4/6 mx-2 text-center md:text-left shadow"
              >
                <p>
                  How about learning something new
                </p>
                <p
                  class="text-primary-light"
                >
                  while you're having fun?
                </p>
              </div>
              <div
                class="mb-6"
              >
                <p
                  class="text-lg mx-2 text-center md:text-left shadow"
                >
                  <span
                    class="font-bold"
                  >
                    Ghost Town 
                  </span>
                  <span
                    class="font-light"
                  >
                    is a new way to gamify education using the full power of WebGL
                  </span>
                </p>
              </div>
              <div
                class="my-10 flex flex-col md:flex-row justify-items-center items-center"
              >
                <a
                  href="/ghost-town"
                >
                  <button
                    class="bg-transparent hover:bg-primary-light text-white font-semibold hover:text-white py-4 px-14 border-4 border-primary-light hover:border-transparent rounded-full"
                  >
                    <p
                      class="text-3xl"
                    >
                      Let's Start
                    </p>
                  </button>
                </a>
              </div>
            </div>
          </section>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`pages >> Home should render the Home page properly when loading: Home-loading 1`] = `
<div>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    />
  </div>
  <div
    class="relative overflow-hidden "
  >
    <div
      class="bg-background h-screen bg-cover bg-no-repeat bg-center pt-4"
      style="background-image: url(img/background_main_page.png);"
    >
      <header
        class="relative"
        data-headlessui-state=""
      >
        <nav
          aria-label="Global"
          class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl"
        >
          <div
            class="flex flex-1 items-center"
          >
            <a
              href="/"
            >
              <img
                alt="Ghost Town - Learning with Ghosts"
                data-nimg="1"
                decoding="async"
                height="170"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
                style="color: transparent;"
                width="150"
              />
            </a>
          </div>
          <div
            class="md:flex md:items-center md:space-x-6"
          >
            <div
              class="flex items-center justify-center"
            >
              <div
                class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full"
                role="status"
              >
                <span
                  class="visually-hidden"
                >
                  Loading...
                </span>
              </div>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl h-full"
      >
        <div
          class=""
        >
          <section
            class="mx-auto md:mx-4 max-w-7xl lg:px-8 self-center"
          >
            <div
              class="font-josefin text-white flex flex-col items-start"
            >
              <div
                class="text-4xl md:text-6xl font-bold md:w-4/6 mx-2 text-center md:text-left shadow"
              >
                <p>
                  How about learning something new
                </p>
                <p
                  class="text-primary-light"
                >
                  while you're having fun?
                </p>
              </div>
              <div
                class="mb-6"
              >
                <p
                  class="text-lg mx-2 text-center md:text-left shadow"
                >
                  <span
                    class="font-bold"
                  >
                    Ghost Town 
                  </span>
                  <span
                    class="font-light"
                  >
                    is a new way to gamify education using the full power of WebGL
                  </span>
                </p>
              </div>
              <div
                class="my-10 flex flex-col md:flex-row justify-items-center items-center"
              >
                <a
                  href="/ghost-town"
                >
                  <button
                    class="bg-transparent hover:bg-primary-light text-white font-semibold hover:text-white py-4 px-14 border-4 border-primary-light hover:border-transparent rounded-full"
                  >
                    <p
                      class="text-3xl"
                    >
                      Let's Start
                    </p>
                  </button>
                </a>
              </div>
            </div>
          </section>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`pages >> Home should render the Home page properly with user signed: Home-signed 1`] = `
<div>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    />
  </div>
  <div
    class="relative overflow-hidden "
  >
    <div
      class="bg-background h-screen bg-cover bg-no-repeat bg-center pt-4"
      style="background-image: url(img/background_main_page.png);"
    >
      <header
        class="relative"
        data-headlessui-state=""
      >
        <nav
          aria-label="Global"
          class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl"
        >
          <div
            class="flex flex-1 items-center"
          >
            <a
              href="/"
            >
              <img
                alt="Ghost Town - Learning with Ghosts"
                data-nimg="1"
                decoding="async"
                height="170"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
                style="color: transparent;"
                width="150"
              />
            </a>
          </div>
          <div
            class="md:flex md:items-center md:space-x-6"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="block md:hidden mx-4"
              >
                <div
                  class="relative inline-block text-left"
                  data-headlessui-state=""
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class=""
                    data-headlessui-state=""
                    id="headlessui-menu-button-:r7:"
                    type="button"
                  >
                    <svg
                      fill="white"
                      height="32px"
                      id="Layer_1"
                      version="1.1"
                      viewBox="0 0 32 32"
                    >
                      <path
                        d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="hidden md:flex flex-row justify-items-center items-center"
              >
                <div
                  class="mx-4"
                >
                  <a
                    href="#"
                  >
                    <span
                      class="font-josefin font-bold text-lg text-white"
                    >
                      ABOUT
                    </span>
                  </a>
                </div>
                <div
                  class="mx-4"
                >
                  <div
                    class="relative inline-block text-left"
                    data-headlessui-state=""
                  >
                    <div>
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-headlessui-state=""
                        id="headlessui-menu-button-:r8:"
                        type="button"
                      >
                        <div>
                          <span
                            class="inline-flex h-12 w-12 items-center justify-center rounded-full bg-gray-500"
                          >
                            <span
                              class="text-lg font-medium leading-none text-white"
                            >
                              U
                            </span>
                          </span>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl h-full"
      >
        <div
          class=""
        >
          <section
            class="mx-auto md:mx-4 max-w-7xl lg:px-8 self-center"
          >
            <div
              class="font-josefin text-white flex flex-col items-start"
            >
              <div
                class="text-4xl md:text-6xl font-bold md:w-4/6 mx-2 text-center md:text-left shadow"
              >
                <p>
                  How about learning something new
                </p>
                <p
                  class="text-primary-light"
                >
                  while you're having fun?
                </p>
              </div>
              <div
                class="mb-6"
              >
                <p
                  class="text-lg mx-2 text-center md:text-left shadow"
                >
                  <span
                    class="font-bold"
                  >
                    Ghost Town 
                  </span>
                  <span
                    class="font-light"
                  >
                    is a new way to gamify education using the full power of WebGL
                  </span>
                </p>
              </div>
              <div
                class="my-10 flex flex-col md:flex-row justify-items-center items-center"
              >
                <a
                  href="/ghost-town"
                >
                  <button
                    class="bg-transparent hover:bg-primary-light text-white font-semibold hover:text-white py-4 px-14 border-4 border-primary-light hover:border-transparent rounded-full"
                  >
                    <p
                      class="text-3xl"
                    >
                      Let's Start
                    </p>
                  </button>
                </a>
              </div>
            </div>
          </section>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`pages >> Home should render the Home page properly: Home-default 1`] = `
<div>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    />
  </div>
  <div
    class="relative overflow-hidden "
  >
    <div
      class="bg-background h-screen bg-cover bg-no-repeat bg-center pt-4"
      style="background-image: url(img/background_main_page.png);"
    >
      <header
        class="relative"
        data-headlessui-state=""
      >
        <nav
          aria-label="Global"
          class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl"
        >
          <div
            class="flex flex-1 items-center"
          >
            <a
              href="/"
            >
              <img
                alt="Ghost Town - Learning with Ghosts"
                data-nimg="1"
                decoding="async"
                height="170"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
                style="color: transparent;"
                width="150"
              />
            </a>
          </div>
          <div
            class="md:flex md:items-center md:space-x-6"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="block md:hidden mx-4"
              >
                <div
                  class="relative inline-block text-left"
                  data-headlessui-state=""
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class=""
                    data-headlessui-state=""
                    id="headlessui-menu-button-:r2:"
                    type="button"
                  >
                    <svg
                      fill="white"
                      height="32px"
                      id="Layer_1"
                      version="1.1"
                      viewBox="0 0 32 32"
                    >
                      <path
                        d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="hidden md:flex flex-row justify-items-center items-center"
              >
                <div
                  class="mx-4"
                >
                  <a
                    href="#"
                  >
                    <span
                      class="font-josefin font-bold text-lg text-white"
                    >
                      ABOUT
                    </span>
                  </a>
                </div>
                <div
                  class="mx-4"
                >
                  <button
                    class="bg-primary hover:bg-primary-dark py-2 px-4 rounded"
                  >
                    <span
                      class="font-josefin font-bold text-lg text-white"
                    >
                      LOGIN
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
      <main
        class="relative mx-auto flex items-center justify-between px-4 sm:px-6 max-w-screen-2xl h-full"
      >
        <div
          class=""
        >
          <section
            class="mx-auto md:mx-4 max-w-7xl lg:px-8 self-center"
          >
            <div
              class="font-josefin text-white flex flex-col items-start"
            >
              <div
                class="text-4xl md:text-6xl font-bold md:w-4/6 mx-2 text-center md:text-left shadow"
              >
                <p>
                  How about learning something new
                </p>
                <p
                  class="text-primary-light"
                >
                  while you're having fun?
                </p>
              </div>
              <div
                class="mb-6"
              >
                <p
                  class="text-lg mx-2 text-center md:text-left shadow"
                >
                  <span
                    class="font-bold"
                  >
                    Ghost Town 
                  </span>
                  <span
                    class="font-light"
                  >
                    is a new way to gamify education using the full power of WebGL
                  </span>
                </p>
              </div>
              <div
                class="my-10 flex flex-col md:flex-row justify-items-center items-center"
              >
                <a
                  href="/ghost-town"
                >
                  <button
                    class="bg-transparent hover:bg-primary-light text-white font-semibold hover:text-white py-4 px-14 border-4 border-primary-light hover:border-transparent rounded-full"
                  >
                    <p
                      class="text-3xl"
                    >
                      Let's Start
                    </p>
                  </button>
                </a>
              </div>
            </div>
          </section>
        </div>
      </main>
    </div>
  </div>
</div>
`;
